2010-04-25  James Youngman  <jay@gnu.org>

	Use valgrind for binary file tests, sccs tests and cdc tests.
	* tests/binary/auto.sh: Use valgrind.
	* tests/binary/binbasic.sh: Likewise.
	* tests/binary/eightbit.sh: Likewise.
	* tests/binary/seeking.sh: Likewise.
	* tests/bsd-sccs/sf595594.sh: Likewise.
	* tests/bsd-sccs/driver-basic.sh: Likewise.
	* tests/bsd-sccs/delsfile.sh: Likewise.
	* tests/cdc/1general.sh: Use valgrind.
	* tests/cdc/2comment.sh: Likewise.
	* tests/cdc/3MRs.sh: Likewise.
	* tests/cdc/4order.sh: Likewise.

	Support running the regression tests under valgrind.
	* configure.ac: Allow the user to specify --without-valgrind.
	* tests/admin/admin-hz.sh: Use valgrind.
	* tests/admin/abspath.sh: Likewise.
	* tests/admin/comment.sh: Likewise.
	* tests/admin/flags.sh: Likewise.
	* tests/admin/hardlinks.sh: Likewise.
	* tests/admin/i-option.sh: Likewise.
	* tests/admin/init-mr.sh: Likewise.
	* tests/admin/locks.sh: Likewise.
	* tests/admin/r-option.sh: Likewise.
	* tests/admin/t-option.sh: Likewise.
	* tests/admin/users.sh: Likewise.
	* tests/admin/y-flag.sh: Likewise.
	* tests/common/command-names: Define vg_... versions of $admin,
	$get, etc.  These invoke the named command under valgrind (it
	would be too slow to invoke everything under valgrind).
	* tests/Makefile.am (VALGRIND): substitute this variable and
	export it to the tests.

	Run the unit tests under valgrind.
	* configure.ac: Check for the presence of valgrind.  If we find
	it, use valgrind -q --trace-children=yes.
	
	* unit-tests/Makefile.am (TESTS_ENVIRONMENT): Run the tests under
	valgrind.
	* tests/README: Explain that these are regression tests and point
	to the unit tests.

	Remove explicit template instantiations.
	* admin.cc: Remove explicit template instantiations.
	* cap.cc: Likewise.
	* cdc.cc: Likewise.
	* delta.cc: Likewise.
	* dtbl-prepend.cc: Likewise.
	* fileiter.cc: Likewise.
	* get.cc: Likewise.
	* prs.cc: Likewise.
	* prt.cc: Likewise.
	* rel_list.cc: Likewise.