@@ -31,7 +31,7 @@ docommand o1 "${admin} -n $s" 0 IGNORE IGNORE
 
 docommand o2 "${get} -e $s" 0 IGNORE IGNORE
 append $g "hello, world"
-docommand o3 "${delta} -r1.1 -yFirst $s" 0 \
+docommand o3 "${vg_delta} -r1.1 -yFirst $s" 0 \
  "1.2\n1 inserted\n0 deleted\n0 unchanged\n" IGNORE
 
 docommand o4 "${get} -e $s" 0 IGNORE IGNORE
@@ -39,7 +39,7 @@ append $g "hello, world"
 
 
 # The -s option should suppress output to stdout.
-docommand o5 "${delta} -s -r1.2 -ySecond $s" 0 "" IGNORE
+docommand o5 "${vg_delta} -s -r1.2 -ySecond $s" 0 "" IGNORE
 
 # Now we have deltas 1.1, 1.2 and 1.3.
 
@@ -56,25 +56,25 @@ append ${g}_2 "this is appended to file 2"
 mv ${g}_1 ${g} || miscarry "Could not rename ${g}_1 to ${g}"
 
 # Failure to specify an SCCS file name is an error.
-docommand o9 "${delta} -r1.2.1.1 -yBranch1" 1 IGNORE IGNORE
+docommand o9 "${vg_delta} -r1.2.1.1 -yBranch1" 1 IGNORE IGNORE
 
 # Unknown command line option is an error (we pick an unlikely one)
-docommand o10 "${delta}"' -! -yBranch1' 1 IGNORE IGNORE
+docommand o10 "${vg_delta}"' -! -yBranch1' 1 IGNORE IGNORE
 
 # Ambiguity in SID selection is an error
-docommand o11 "${delta} -r1 -yBranch1 $s" 1 IGNORE IGNORE
-docommand o12 "${delta} -yBranch1 $s" 1 IGNORE IGNORE
+docommand o11 "${vg_delta} -r1 -yBranch1 $s" 1 IGNORE IGNORE
+docommand o12 "${vg_delta} -yBranch1 $s" 1 IGNORE IGNORE
 
 # Invalid branch should be detected (note return value 2 not 1)
-docommand o13 "${delta} -r1.2.1.1a -yBranch2 $s" 1 IGNORE IGNORE
+docommand o13 "${vg_delta} -r1.2.1.1a -yBranch2 $s" 1 IGNORE IGNORE
 
-docommand o14 "${delta} -r1.1.1.1 -yBranch1 $s" 0 IGNORE IGNORE
+docommand o14 "${vg_delta} -r1.1.1.1 -yBranch1 $s" 0 IGNORE IGNORE
 
 # the p-file should still exist
 docommand o15 "test -r $p" 0 "" ""
 
 mv ${g}_2 ${g} || miscarry "Could not rename ${g}_2 to ${g}"
-docommand o16 "${delta} -r1.2.1.1 -p -yBranch2 $s" 0 \
+docommand o16 "${vg_delta} -r1.2.1.1 -p -yBranch2 $s" 0 \
 "1.2.1.1\n1a2\n> this is appended to file 2\n1 inserted\n0 deleted\n1 unchanged\n" IGNORE
 
 # the p-file should now be gone
